--- a/style.css
+++ b/style.css
@@ -54,8 +54,12 @@ body{
     font-size: 8vmin;
 }
 .msg-container{
-    height: 40vmin;
-
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
 }
 
 .hide{
